--- a/entries/templates/entries/index.html
+++ b/entries/templates/entries/index.html
@@ -2,9 +2,18 @@
 
 
 
+<head>
+    <title>Wiki index</title>
+</head>
+
 <body>
     <p>
-        This is index file
+        All pages:
+        
     </p>
-    {{wiki_text|wiki_parse|safe}}
+    <p>
+        <a href="{% url 'create_entry' %}">Create new entry</a>
+    <p>
 </body>
+
+</html>
