--- a/entries/templates/entries/view_entry.html
+++ b/entries/templates/entries/view_entry.html
@@ -20,5 +20,9 @@
       <p>
         <a href="{% url 'create_entry' %}">Create new entry</a>
       </p>
+      <p>
+        <a href="{% url 'all_entries' %}">View all entries</a>
+      </p>
+
   </body>
 </html>
